[gd_scene load_steps=7 format=3 uid="uid://brxdmi1q7jobr"]

[ext_resource type="Script" path="res://scripts/ui/achievements_animation.gd" id="1_c4v05"]
[ext_resource type="Material" uid="uid://cqn5rkmj7io2i" path="res://shaders/panel_shader_material.tres" id="1_lhons"]
[ext_resource type="AudioStream" uid="uid://bdg6rdgg5xxrc" path="res://audio/sfx/Upsilon.ogg" id="2_q24nx"]

[sub_resource type="Gradient" id="Gradient_x57p1"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_b10hj"]
gradient = SubResource("Gradient_x57p1")

[sub_resource type="LabelSettings" id="LabelSettings_ctvsf"]
line_spacing = 0.0
font_size = 18

[node name="AchievementPanelContainer" type="PanelContainer"]
material = ExtResource("1_lhons")
custom_minimum_size = Vector2(400, 85)
offset_top = -85.0
offset_right = 310.0
script = ExtResource("1_c4v05")

[node name="AchvPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_q24nx")
bus = &"SFX"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="AchvIcon" type="TextureRect" parent="HBoxContainer/MarginContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_b10hj")
expand_mode = 1

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="AchvGetLabel" type="Label" parent="HBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
text = "Odblokowano osiągnięcie!"
horizontal_alignment = 1

[node name="AchvTitleLabel" type="Label" parent="HBoxContainer/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
text = "#AchievementTitle"
label_settings = SubResource("LabelSettings_ctvsf")
vertical_alignment = 2
clip_text = true
text_overrun_behavior = 3

[node name="AchvDescLabel" type="Label" parent="HBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 11
text = "#AchievementDescription"
text_overrun_behavior = 3
